[package]
name = "my-redis-rust"
version = "0.1.0"
authors = ["Seaborn Lee <seabornlee.cn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
